--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "dev": "nodemon app.js"
+    "dev": "nodemon app.js",
+    "test": "node test/test-listen.js",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +20,8 @@
     "mongoose": "^6.7.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "supertest": "^6.3.1",
+    "tap": "^16.3.2"
   }
 }
